assets/src/scss/3-global/_navbar.scss
// lift the logo up a bit
.navbar-header {
		position: relative;
		@include rem(top, -5px);
    a {
      border: none;
    }
}

.navbar-inverse {
  border: none;
}

@media screen and (min-width: $grid-float-breakpoint) {
  // Dropdown menu items
  .navbar-nav {
    > li > a {
      color: $navbar-default-link-color;
      text-decoration: none;
      transition: none;
      margin-bottom: 0;
      padding-bottom: 0;
      &:hover {
        padding-bottom: 0;
        color: $navbar-default-link-hover-color;
        background-color: $navbar-default-link-hover-bg;
        border-bottom: 3px solid $eshill-yellow;
        height: $navbar-height;
      }
    }
    > .active > a {
      color: $navbar-default-link-active-color;
      background-color: $navbar-default-link-active-bg;
      border-bottom: 3px solid $eshill-yellow;
      height: $navbar-height;
    }
    .dropdown-menu {
      position: absolute;
      top: $navbar-height;
      background-color: $eshill-yellow;
      padding-left: 0;
      > li > a {
        @include rem(text-indent, 20px);
        color: $link-color;
        background-color: $eshill-yellow;
        &:hover {
          text-decoration: underline;
          background-color: $version-buttons;
        }
      }
      > li.separator {
        @include rem(font-size, 13px);
        background-color: $eshill-yellow;
        text-transform: uppercase;
        color: $separator-color;
      }
      > .active > a {
        background-color: $version-buttons;
        &:hover {
          color: $link-color;
        }
      }
    }
  }
}
// restyle navbar dropdown menu when collapsed
@media screen and (max-width: $grid-float-breakpoint) {
  .navbar-nav {
    > li > a {
      text-decoration: none;
    }
    .dropdown-menu {
      > li > a {
        text-decoration: none;
      }
      > li.separator {
        text-transform: uppercase;
        color: $eshill-section-bgcolor;
        padding-left: 15px !important;
        border-bottom: 1px solid rgba(255, 255, 255, .3) !important;
      }
    }
  }
  .navbar-collapse.in {
    overflow-y: initial;
  }
  .navbar-nav {
    margin: 1.5px -4px;

    > li.open > .dropdown-menu {
      position: absolute;
      left: auto;
      right: 0;
      background: #287ba0;
      z-index: 3;
      box-shadow: 2px 3px 1px 0 #206888;
    }
  }
  .nav > li {
    display: inline-block;

    > a {
      padding: 10px 3px;
    }
  }
  #main-nav + .navbar-right {
    float: right;
    margin-top: 6px;
    margin-right: 10px;
  }
  .navbar-right .navbar-form {
    margin: 0 -15px;
    border: none;
    box-shadow: none;
  }
  #login-nav .navbar-form {
    margin-top: -10px;
  }
}

// style navbar search form-control
form#search-form.navbar-form div.form-group.nospace div.input-group input#search.form-control {
   width: 160px !important;
   border-radius: $btn-border-radius-base;
 }

@media screen and (max-width: 375px) {
  .nav > li > a {
    padding: 10px 2px;
    font-size: 14px;
  }

  .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
    font-size: 14px;
  }
}

